Fixed z-index issue

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -576,12 +576,24 @@ video {
   position: absolute;
 }
 
+.relative {
+  position: relative;
+}
+
 .bottom-5 {
   bottom: 1.25rem;
 }
 
 .left-\[50\%\] {
   left: 50%;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .col-span-10 {
@@ -1218,6 +1230,10 @@ a:not(.btn):hover {
     top: 2.5rem;
   }
 
+  .md\:z-0 {
+    z-index: 0;
+  }
+
   .md\:col-span-8 {
     grid-column: span 8 / span 8;
   }
@@ -1361,6 +1377,10 @@ a:not(.btn):hover {
 }
 
 @media (min-width: 1024px) {
+  .lg\:z-0 {
+    z-index: 0;
+  }
+
   .lg\:hidden {
     display: none;
   }
